TIMR-2743 - Confirmation labels no longer overlap icons on the current visit confirmation modal

--- a/OpenIZMobile.Applets/css/theme.css
+++ b/OpenIZMobile.Applets/css/theme.css
@@ -1727,3 +1727,7 @@ a.disabled {
 .vaccination-td {
     white-space: normal !important;
 }
+.label-inline {
+    display: inline-block;
+    margin: 2px 0 2px 0;
+}
